k8s-federation/src/manifests/microbots-ds.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    app: microbot-ds
  name: microbot-ds
  namespace: test-ns
spec:
  template:
    metadata:
      labels:
        app: microbot-ds
    spec:
      containers:
      - image: dontrebootme/microbot:v1
        imagePullPolicy: ""
        name: microbot
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 30
        resources: {}
      restartPolicy: Always
